logs/flutter_daemon.txt
!! PLEASE REVIEW THIS LOG FOR SENSITIVE INFORMATION BEFORE SHARING !!

Dart Code extension: 3.73.20230906
Flutter extension: 3.72.0 (not activated)

App: Visual Studio Code
App Host: desktop
Version: 1.82.0
Platform: win

HTTP_PROXY: undefined
NO_PROXY: undefined

Logging Categories:
    FlutterDaemon

Mon Sep 11 2023 [12:17:22 GMT+0700 (Indochina Time)] Log file started
[12:17:22 PM] [FlutterDaemon] [Info] Spawning C:\src\flutter\bin\flutter.bat with args ["daemon"]
[12:17:22 PM] [FlutterDaemon] [Info] ..  in C:\src\flutter
[12:17:22 PM] [FlutterDaemon] [Info] ..  with {"toolEnv":{"FLUTTER_HOST":"VSCode","PUB_ENVIRONMENT":"vscode.dart-code"}}
[12:17:22 PM] [FlutterDaemon] [Info]     PID: 3972
[12:17:24 PM] [FlutterDaemon] [Info] <== [{"event":"daemon.connected","params":{"version":"0.6.1","pid":19504}}]
[12:17:24 PM] [FlutterDaemon] [Info] ==> [{"id":"1","method":"device.enable"}]
[12:17:24 PM] [FlutterDaemon] [Info] ==> [{"id":"2","method":"emulator.getEmulators"}]
[12:17:24 PM] [FlutterDaemon] [Info] <== [{"event":"daemon.logMessage","params":{"level":"status","message":"Starting device daemon..."}}]
[12:17:24 PM] [FlutterDaemon] [Info] <== [{"id":"1"}]
[12:17:26 PM] [FlutterDaemon] [Info] <== [{"id":"2","result":[{"id":"Pixel_3a_API_34_extension_level_7_x86_64","name":"Pixel_3a_API_34_extension_level_7_x86_64","category":"mobile","platformType":"android"},{"id":"Pixel_6_Pro_API_33","name":"Pixel 6 Pro API 33","category":"mobile","platformType":"android"}]}]
[12:17:28 PM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"windows","name":"Windows","platform":"windows-x64","emulator":false,"category":"desktop","platformType":"windows","ephemeral":false,"emulatorId":null,"sdk":"Microsoft Windows [Version 10.0.22621.2215]","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":false,"fastStart":false,"flutterExit":true,"hardwareRendering":true,"startPaused":true}}}]
[12:17:28 PM] [FlutterDaemon] [Info] ==> [{"id":"3","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\luyencode"}}]
[12:17:28 PM] [FlutterDaemon] [Info] <== [{"id":"3","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[12:17:28 PM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"chrome","name":"Chrome","platform":"web-javascript","emulator":false,"category":"web","platformType":"web","ephemeral":false,"emulatorId":null,"sdk":"Google Chrome 116.0.5845.142","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":false,"fastStart":false,"flutterExit":false,"hardwareRendering":true,"startPaused":true}}}]
[12:17:28 PM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"edge","name":"Edge","platform":"web-javascript","emulator":false,"category":"web","platformType":"web","ephemeral":false,"emulatorId":null,"sdk":"Microsoft Edge 116.0.1938.76","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":false,"fastStart":false,"flutterExit":false,"hardwareRendering":true,"startPaused":true}}}]
[12:18:38 PM] [FlutterDaemon] [Info] ==> [{"id":"4","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\luyencode"}}]
[12:18:38 PM] [FlutterDaemon] [Info] <== [{"id":"4","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[12:18:38 PM] [FlutterDaemon] [Info] ==> [{"id":"5","method":"emulator.getEmulators"}]
[12:18:38 PM] [FlutterDaemon] [Info] <== [{"id":"5","result":[{"id":"Pixel_3a_API_34_extension_level_7_x86_64","name":"Pixel_3a_API_34_extension_level_7_x86_64","category":"mobile","platformType":"android"},{"id":"Pixel_6_Pro_API_33","name":"Pixel 6 Pro API 33","category":"mobile","platformType":"android"}]}]
[12:18:39 PM] [FlutterDaemon] [Info] ==> [{"id":"6","method":"emulator.launch","params":{"emulatorId":"Pixel_3a_API_34_extension_level_7_x86_64","coldBoot":false}}]
[12:18:42 PM] [FlutterDaemon] [Info] <== [{"id":"6"}]
[12:18:55 PM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"emulator-5554","name":"sdk gphone64 x86 64","platform":"android-x64","emulator":true,"category":"mobile","platformType":"android","ephemeral":true,"emulatorId":"Pixel_3a_API_34_extension_level_7_x86_64","sdk":"Android 14 (API 34)","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":true,"fastStart":true,"flutterExit":true,"hardwareRendering":true,"startPaused":true}}}]
[12:18:55 PM] [FlutterDaemon] [Info] ==> [{"id":"7","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\luyencode"}}]
[12:18:55 PM] [FlutterDaemon] [Info] <== [{"id":"7","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[12:19:17 PM] [FlutterDaemon] [Info] ==> [{"id":"8","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\luyencode"}}]
[12:19:17 PM] [FlutterDaemon] [Info] <== [{"id":"8","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[12:19:17 PM] [FlutterDaemon] [Info] ==> [{"id":"9","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\luyencode"}}]
[12:19:17 PM] [FlutterDaemon] [Info] <== [{"id":"9","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[12:55:03 PM] [FlutterRun] [Error] [Dart  (Pixel_3a_API_34_extension_level_7_x86_64)] lib/screen_action_button.dart:1:8: Error: Dart library 'dart:js_util' is not available on this platform.
[12:55:03 PM] [FlutterRun] [Error] [Dart  (Pixel_3a_API_34_extension_level_7_x86_64)] import 'dart:js_util';
       ^
Context: The unavailable library 'dart:js_util' is imported through these packages:

    package:luyencode => dart:js_util

Detailed import paths for (some of) the these imports:

    package:luyencode/main.dart => package:luyencode/screen_action_button.dart => dart:js_util
[12:55:06 PM] [FlutterRun] [Error] [Dart  (Pixel_3a_API_34_extension_level_7_x86_64)] lib/screen_action_button.dart:1:8: Error: Dart library 'dart:js_util' is not available on this platform.
[12:55:06 PM] [FlutterRun] [Error] [Dart  (Pixel_3a_API_34_extension_level_7_x86_64)] import 'dart:js_util';
       ^
Context: The unavailable library 'dart:js_util' is imported through these packages:

    package:luyencode => dart:js_util

Detailed import paths for (some of) the these imports:

    package:luyencode/main.dart => package:luyencode/screen_action_button.dart => dart:js_util
[12:55:26 PM] [FlutterRun] [Error] [Dart  (Pixel_3a_API_34_extension_level_7_x86_64)] lib/screen_action_button.dart:1:8: Error: Dart library 'dart:js_util' is not available on this platform.
[12:55:26 PM] [FlutterRun] [Error] [Dart  (Pixel_3a_API_34_extension_level_7_x86_64)] import 'dart:js_util';
       ^
Context: The unavailable library 'dart:js_util' is imported through these packages:

    package:luyencode => dart:js_util

Detailed import paths for (some of) the these imports:

    package:luyencode/main.dart => package:luyencode/screen_action_button.dart => dart:js_util
